--- a/apps/docs/content/docs/react/examples/basic.mdx
+++ b/apps/docs/content/docs/react/examples/basic.mdx
@@ -1,5 +1,5 @@
 ---
-title: Basic Examples
+title: Basic
 description: Step-by-step guides to build horizontal, vertical, and custom steppers with minimal code.
 ---
 
